# Riki-ROSbot

Motor-Encoder Test Sketches/MotorTestRun/: MotorTestRun.ino
Motor-Encoder Test Sketches/encoder_test/: encoder_test.ino
RaspberryPi/imu_tools/imu_filter_madgwick/src/: imu_filter_ros.cpp
RaspberryPi/rikirobot/: CMakeLists.txt  package.xml
RaspberryPi/rikirobot/launch/: amcl-corrected.launch  amcl-old.launch  amcl.launch  bringup.launch  display.launch  display_zee.launch  navigate.launch  zee_display_bringup.launch  zee_display_bringup2.launch  zee_minimal.launch  zee_robot_bringup.launch
RaspberryPi/rikirobot/maps/: map1.yaml  map2.yaml  map_30.pgm  map_30.yaml  map_lab_25th.pgm  map_lab_25th.yaml  map_lab_26th.pgm  map_lab_26th.yaml  map_new.pgm  map_new.yaml
RaspberryPi/rikirobot/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
RaspberryPi/rikirobot/rviz/: navigate_new.rviz  zee_robot.rviz
RaspberryPi/rikirobot/src/: riki_base_node.cpp
RaspberryPi/rikirobot/urdf/: riki_robot.gv  zee_robot.gv  zee_robot.urdf
RaspberryPi/ros_arduino/ros_arduino_imu/firmware/ros_raw_imu/: imu_configuration.h
RaspberryPi/ros_arduino/ros_arduino_imu/launch/: imu_ahrs.launch
RaspberryPi/rplidar_ros/: rplidar.launch
RaspberryPi/rplidar_ros/launch/: rplidar.launch
Teensy/config/: config.h
Teensy/imu/: accelerometer.h
Teensy/lib/config/: config.h
Teensy/lib/imu/: gyroscope.h  magnetometer.h
Teensy/src/teensy/: teensy.ino
